--- a/stumblepanni-app/app.json
+++ b/stumblepanni-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "StumblePanni",
-    "slug": "StumblePanni",
+    "name": "stumblepanni-app",
+    "slug": "stumblepanni-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
