--- a/stumblepanni-app/app.json
+++ b/stumblepanni-app/app.json
@@ -27,7 +27,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-document-picker"
     ],
     "experiments": {
       "typedRoutes": true
