--- a/visa-officer-dashboard/package.json
+++ b/visa-officer-dashboard/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
