--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ visa-officer-dashboard/.env
 visa-officer-dashboard/lib
 visa-officer-dashboard/node_modules
 backend/.env
+backend/rag-knowledge-base
