--- a/stumblepanni-app/package.json
+++ b/stumblepanni-app/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
@@ -31,18 +32,18 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-native": "0.74.5",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-linear-gradient": "~13.0.2",
     "react-native-webview": "13.8.6",
-    "expo-document-picker": "~12.0.2"
+    "expo-checkbox": "~3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
