--- a/stumblepanni-app/package.json
+++ b/stumblepanni-app/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
@@ -44,8 +45,7 @@
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "expo-checkbox": "~3.0.0"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
